# hypergon

./: CMakeLists.txt  README.md  hypergon.code-workspace
cmake/: Install.cmake
include/: common.h  hypergon.h  hypergon.hpp
src/: common.cpp  engine.cpp  engine.hpp  hypergon.cpp  main.cpp
src/geometry/: vertex.hpp
src/rendering/: viewport.cpp  viewport.hpp
src/scene/: node.hpp  scene.cpp  scene.hpp
src/scene/objects/: camera.hpp
src/utils/: color.hpp  config.hpp
src/utils/logging/: logger.cpp  logger.hpp
src/utils/tasking/: manager.cpp  manager.hpp  task.hpp
